2004-10-25  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/unix/sysv/linux/sh/pthread_cond_timedwait.S
	(__pthread_cond_timedwait): Use clock_gettime syscall if exists.

	* sysdeps/unix/sysv/linux/sh/lowlevellock.S
	(__lll_mutex_timedlock_wait): Fix a bad branch condition.

2004-10-24  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/smp.h (is_smp_system): Use
	not-cancelable I/O functions.

2004-10-21  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/unix/sysv/linux/sh/lowlevellock.S
	(__lll_mutex_timedlock_wait): If woken but cannot get the lock,
	make sure 2 is stored in the futex and we looked at the old value.
	Fix a few other problems to return the correct value.

2004-10-14  Richard Henderson  <rth@redhat.com>

	* sysdeps/alpha/tcb-offsets.sym (thread_offsetof): Redefine to
	make gcc4 happy.

2004-10-06  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/jmp-unwind.c: Include pthreadP.h instead
	of pthread-functions.h and pthreaddef.h.
	* sysdeps/unix/sysv/linux/s390/jmp-unwind.c: Likewise.

	* sysdeps/unix/sysv/linux/x86_64/bits/pthreadtypes.h (pthread_cond_t):
	Change __data.__nwaiters from int to unsigned int.

	* tst-clock2.c (do_test): Don't fail if _POSIX_THREAD_CPUTIME == 0 and
	sysconf (_SC_THREAD_CPUTIME) returns negative value.

	* allocatestack.c (__find_thread_by_id): Move attribute_hidden
	before return type.

	* sysdeps/s390/jmpbuf-unwind.h: Include bits/wordsize.h.
	(JMPBUF_CFA_UNWINDS_ADJ): Subtract 96 resp. 160 bytes from CFA.

2004-10-06  Ulrich Drepper  <drepper@redhat.com>

	* tst-cancel4.c (tf_msgrcv): Check for failure in msgget.  If the
	test fails, remove message queue.
	(tf_msgsnd): Likewise.

2004-10-05  Jakub Jelinek  <jakub@redhat.com>

	* tst-clock1.c: Change #ifdef to #if defined.
	* tst-clock2.c: Likewise.
	* tst-cond11.c: Likewise.

	* sysdeps/pthread/timer_create.c (timer_create): Use
	defined _POSIX_CPUTIME && _POSIX_CPUTIME >= 0 instead of
	defined CLOCK_PROCESS_CPUTIME_ID #ifs and similarly for